order service adjustments